--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.6",
     "@mui/x-data-grid": "^5.12.3",
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "5.0.1",
+    "reactstrap": "^9.1.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
