--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/x-data-grid": "^5.12.3",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "mdbreact": "^5.1.0",
     "react": "^18.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.0.0",
